8228634: [lworld] ciField::will_link() returns incorrect result for the withfield bytecode