src/hotspot/share/c1/c1_GraphBuilder.hpp
@@ -300,8 +300,7 @@ class GraphBuilder {
   // inline types
   void default_value(int klass_index);
   void withfield(int field_index);
-  void copy_inline_content(ciInlineKlass* vk, Value src, int src_off, Value dest, int dest_off,
-                           ValueStack* state_before, bool needs_patching);
+  void copy_inline_content(ciInlineKlass* vk, Value src, int src_off, Value dest, int dest_off, ValueStack* state_before);
 
   // stack/code manipulation helpers
   Instruction* append_with_bci(Instruction* instr, int bci);
@@ -399,12 +398,13 @@ class GraphBuilder {
   // Inline type support
   void update_larval_state(Value v) {
     if (v != NULL && v->as_NewInlineTypeInstance() != NULL) {
-      v->as_NewInlineTypeInstance()->update_larval_state();
+      v->as_NewInlineTypeInstance()->set_not_larva_anymore();
     }
   }
   void update_larva_stack_count(Value v) {
-    if (v != NULL && v->as_NewInlineTypeInstance() != NULL) {
-      v->as_NewInlineTypeInstance()->update_stack_count();
+    if (v != NULL && v->as_NewInlineTypeInstance() != NULL &&
+        v->as_NewInlineTypeInstance()->in_larval_state()) {
+      v->as_NewInlineTypeInstance()->decrement_on_stack_count();
     }
   }
 
