src/hotspot/share/c1/c1_ValueMap.hpp
@@ -190,8 +190,7 @@ class ValueNumberingVisitor: public InstructionVisitor {
   void do_NewTypeArray   (NewTypeArray*    x) { /* nothing to do */ }
   void do_NewObjectArray (NewObjectArray*  x) { /* nothing to do */ }
   void do_NewMultiArray  (NewMultiArray*   x) { /* nothing to do */ }
-  void do_WithField      (WithField*       x) { /* nothing to do */ }
-  void do_DefaultValue   (DefaultValue*    x) { /* nothing to do */ }
+  void do_Deoptimize     (Deoptimize*      x) { /* nothing to do */ }
   void do_CheckCast      (CheckCast*       x) { /* nothing to do */ }
   void do_InstanceOf     (InstanceOf*      x) { /* nothing to do */ }
   void do_BlockBegin     (BlockBegin*      x) { /* nothing to do */ }
